# nossat

./: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv  partitions_no_sr.csv  sdkconfig.defaults.esp-box-lite  sdkconfig.defaults.esp32-s3-devkit-c-board  sdkconfig.defaults.nossat_lite_box  sdkconfig.defaults.nossat_one
extra_components/nossat_one/esp-nossat-one/: CMakeLists.txt  esp-nossat-one-display.c  idf_component.yml
extra_components/nossat_one/esp-nossat-one/include/bsp/: esp-nossat-one.h
main/: CMakeLists.txt  Kconfig.projbuild  app_led.c  encoder.h  event_loop.cpp  event_loop.h  file_system.cpp  file_system.h  idf_component.yml  interrupt_manager.cpp  interrupt_manager.h  led_blinker.cpp  led_blinker.h  main.cpp  nossat_err.h  sanity_checks.h  speech_recognition.cpp  speech_recognition.h
main/board/: board.h  nossat_box_lite.cpp  nossat_one.cpp
main/board-old/: board.h
main/board-old/esp-box-lite/: esp-box-lite-board.cpp
main/board-old/esp-box-lite/gui/: lvgl_ui.h
main/board/esp-box-lite/: esp-box-lite-board.cpp
main/board/esp-box-lite/gui/: lvgl_ui.cpp  lvgl_ui.h
main/board/esp-box-lite/gui/font/: font_en_24.h
main/board/esp-box-lite/gui/image/: mic_logo.h
main/board/esp32-s3-devkit-c-board/: esp32-s3-devkit-c-board.cpp
main/board/nossat-one/: esp32-s3-devkit-c-board.cpp  lvgl_ui.c  nossat-one.cpp
main/board/nossat_box_lite/: nossat_box_lite.cpp
main/board/nossat_one/: nossat_one.cpp
main/gui/: gui_box.cpp  gui_one.cpp  gui_one.h  lvgl_timer.cpp  lvgl_timer.h
main/gui/lvgl/: speech_recognition.cpp  speech_recognition.h  volume_control.c  volume_control.h
main/gui/lvgl/font/: font_en_24.c  font_en_24.h
main/gui/lvgl/image/: mic_logo.c  mic_logo.h
main/gui/nossat-one/: nossat-one.eez-project  nossat-one.eez-project-ui-state
main/gui/nossat-one/src/ui/: actions.h  fonts.h  screens.c  screens.h  styles.c  styles.h  ui_font_roboto_mono_medium_30.c
main/hal/: audio_input.h  audio_input_bsp.cpp  audio_input_inmp441.cpp  audio_output.h  audio_output_bsp.cpp  audio_output_max98357a.cpp  display.h  display_bsp.cpp  display_st7735.c  display_st7735.cpp  encoder.cpp  encoder.h  file_system.cpp  knob.cpp  knob.h  led.cpp  lvgl_knob.cpp  lvgl_knob.h
main/hal/audio_input/: audio_input.h  audio_input_bsp.cpp  audio_input_inmp441.cpp
main/hal/audio_output/: audio_output.cpp  audio_output.h  audio_output_bsp.cpp  audio_output_max98357a.cpp
main/hal/encoder/: encoder.cpp
main/hal/file_system/: file_system.cpp  file_system.h
main/hal/led/: led.cpp  led.h
main/lvgl/: gui_box.cpp  gui_box.h  gui_one.cpp  lvgl_ui.c  lvgl_ui.h
main/lvgl/speech/: lvgl_ui.cpp
main/lvgl/speech/image/: mic_logo.c
main/network/: mqtt_manager.cpp  mqtt_manager.h
main/sound/: audio_data.cpp  audio_data.h  speech_recognition.cpp  speech_recognition.h
main/speech_recognition/: speech_recognition.cpp  speech_recognition.h
main/system/: event_loop.h  file_system.cpp  interrupt_manager.cpp  interrupt_manager.h  resource_manager.h  task.cpp  task.h
main/utils/audio_data/: audio_data.cpp  audio_data.h
nossat-box-lite-components/nossat-box-lite/: idf_component.yml
nossat-one-components/esp-nossat-one/: CMakeLists.txt  Kconfig  esp-nossat-one-display.c  esp-nossat-one-led.c  esp-nossat-one.c  idf_component.yml
nossat-one-components/esp-nossat-one/include/bsp/: esp-bsp.h  esp-nossat-one.h
nossat-one-components/esp_lcd_st7735/: CMakeLists.txt  esp_lcd_st7735.c  idf_component.yml
nossat-one-components/esp_lcd_st7735/include/: esp_lcd_st7735.h
nossat_box_lite_components/nossat_box_lite/: idf_component.yml
nossat_one_components/esp-nossat-one/: bsp_err.h  esp-nossat-one-display.c
nossat_one_components/esp-nossat-one/include/bsp/: esp-nossat-one.h
partition_table/: partitionTable.csv
